<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundmain"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.2"

        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button

            android:id="@+id/btn_novoJogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@android:drawable/btn_default"
            android:hint="@string/txtNovoJogo"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textSize="25dp" />

        <Button

            android:id="@+id/btn_estatistica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@android:drawable/btn_default"
            android:hint="@string/txtEstatisticas"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>